[project]
name = "kiwoompy"
version = "0.0.1a"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "meonji-gogo", email = "meonji-gogo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
