[project]
name = "kiwoompy"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "meonji-gogo", email = "meonji-gogo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "httpx>=0.27",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.6,<10",
    "mkdocs>=1.6,<2",
    "mkdocstrings[python]>=0.29",
]

dev = [
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]


[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/e2e"
markers = [
    "mock: 단위 테스트, 외부 의존 없음 (CI 실행)",
    "demo: 모의투자 환경 e2e 테스트 (로컬 전용)",
    "real: 실계좌 환경 e2e 테스트 (로컬 전용, 실제 주문 발생 가능)",
]